# basiliskLLM

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  __builtins__.pyi  crowdin.yml  pyproject.toml  renovate.json  requirements.txt  run_tests.py  setup.cfg  setup.py  test_focus_debug.py  test_focus_simple.py  test_improved_singleton.py  test_nvda_focus.py  test_simple.py  test_singleton.py  test_singleton_focus.py  test_toggle_behavior.py  test_windows_ipc.py  win_installer.iss
.claude/: settings.local.json
.github/: copilot-commit-message-instructions.md  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml
.github/agents/: AGENTS.md  a11y-tool-builder.agent.md  desktop-a11y-specialist.agent.md  desktop-a11y-testing-coach.agent.md  developer-hub.agent.md  python-specialist.agent.md  shared-instructions.md  wxpython-specialist.agent.md
.github/prompts/: a11y-tool-builder.prompt.md  desktop-a11y-specialist.prompt.md  desktop-a11y-testing-coach.prompt.md  developer-hub.prompt.md  python-specialist.prompt.md  wxpython-specialist.prompt.md
.github/workflows/: build_app.yml  build_app_exe.yml  ci.yml  ci_branch.yml  ci_release.yml  codeql.yml  copilot-setup-steps.yml  create_release.yml  generate_pot.yml  localisation.yml  localization.yml  release.yml  ruff.yml  update_localization.yml  upload_crowdin.yml
basilisk/: __main__.py  accessible_output.py  account.py  audio_utils.py  completion_handler.py  config.py  config_helper.py  consts.py  conversation.py  decorators.py  enums.py  file_watcher.py  filewatcher.py  global_vars.py  globalvars.py  hotkeys.py  image_file.py  image_helper.py  imagefile.py  imagehelper.py  localization.py  logger.py  main_app.py  mainapp.py  message_position.py  message_segment_manager.py  model_catalog_sampling.py  model_metadata_catalog.py  multiprocessing_worker.py  process_helper.py  provider.py  provider_ai_model.py  provider_ai_model_display.py  provider_capability.py  providercapability.py  recording_thread.py  recordingthread.py  screen_capture_thread.py  screencapturethread.py  send_signal.py  (+10 more)
basilisk/audio/: __init__.py  devices.py  manager.py  sounds.py  streams.py
basilisk/config/: __init__.py  account_config.py  config_constants.py  config_enums.py  config_helper.py  conversation_profile.py  main_config.py
basilisk/conversation/: __init__.py  artifact.py  attached_file.py  content_utils.py  conversation_helper.py  conversation_model.py  conversation_params.py  image_model.py
basilisk/gui/: about_dialog.py  aboutdialog.py  account_dialog.py  accountdialog.py  artifact_dialog.py  base_conversation.py  conversation_history_dialog.py  conversation_profile_dialog.py  conversation_tab.py  conversation_voice_mode_dialog.py  conversationtab.py  edit_block_dialog.py  enhanced_error_dialog.py  global_shortcuts_dialog.py  history_msg_text_ctrl.py  html_view_window.py  main_frame.py  mainframe.py  name_conversation_dialog.py  ocr_handler.py  preferences_dialog.py  preferencesdialog.py  prompt_attachments_panel.py  read_only_message_dialog.py  search_dialog.py  taskbar_icon.py  taskbaricon.py  update_dialog.py  updatedialog.py
basilisk/ipc/: __init__.py  abstract_ipc.py  ipc_model.py  unix_ipc.py  windows_ipc.py
basilisk/model_catalog/: __init__.py  display.py  sampling.py
basilisk/presenters/: __init__.py  account_presenter.py  attachment_panel_presenter.py  base_conversation_presenter.py  conversation_history_presenter.py  conversation_presenter.py  conversation_profile_presenter.py  edit_block_presenter.py  enhanced_error_presenter.py  group_conversation_presenter.py  history_presenter.py  main_frame_presenter.py  ocr_presenter.py  preferences_presenter.py  presenter_mixins.py  reasoning_params_helper.py  search_presenter.py  update_presenter.py  view_utils.py
basilisk/provider_engine/: __init__.py  anthropic_engine.py  base_engine.py  completion_request_strip_keys.py  deepseek_engine.py  dynamic_model_loader.py  engine_model_list_cache.py  gemini_engine.py  generation_param.py  infomaniak_engine.py  legacy_openai_engine.py  mistralai_engine.py  mistralai_ocr.py  model_cache_registry.py  ollama_engine.py  openai_engine.py  openrouter_engine.py  pricing_utils.py  provider_ui_spec.py  reasoning_api_enums.py  reasoning_config.py  responses_api_engine.py  stream_chunk_type.py  usage_utils.py  voice_session.py  xai_engine.py
basilisk/providerengine/: __init__.py  anthropicengine.py  baseengine.py  mistralaiengine.py  openaiengine.py  openrouterengine.py
basilisk/services/: __init__.py  account_model_service.py  async_loop_runner.py  attachment_service.py  conversation_orchestrator.py  conversation_service.py  search_service.py  template_service.py
basilisk/singleton_instance/: __init__.py  abstract_singleton_instance.py  posix_singleton_instance.py  windows_singleton_instance.py
basilisk/tests/: test_accessible_output.py  test_anthropic_engine.py  test_completion_handler.py  test_conversation_tab.py  test_edit_block_dialog.py  test_history_msg_text_ctrl.py  test_main_app.py  test_main_frame.py  test_ocr_handler.py  test_prompt_attachments_panel.py
basilisk/views/: accessible.py  (+25 more)
docs/: branch-cleanup-review.md
src/: aboutdialog.py  account.py  accountdialog.py  config.py  configdialog.py  consts.py  conversation.py  globalvars.py  imagefile.py  imagehelper.py  localization.py  logger.py  main.pyw  provider.py  provideraimodel.py  screencapturethread.py  soundmanager.py
tests/: conftest.py  test_attachment_panel_presenter.py  test_audio_utils.py  test_completion_handler.py  test_conversation_profile.py  test_custom_types.py  test_decorators.py  test_enhanced_error_presenter.py  test_group_message_block.py  test_message_position_manager.py  test_model_catalog_sampling.py  test_ocr_presenter.py  test_provider_ai_model.py  test_provider_ai_model_completion_params.py  test_screen_reader_focus.py  test_send_signal_integration.py  test_singleton_instance.py  test_types.py  test_update_presenter.py  test_windows_focus_management.py  test_windows_ipc.py
(+126 files in other folders)
