[project]
name = "basiliskllm"
dynamic = ["version"]
description = "Where LLMs Unite"
authors = [
    {name = "André-Abush Clause", email ="dev@andreabc.net"},
]
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.14,<3.15"
dependencies = [
    "accessible-output3 @ git+https://github.com/SigmaNight/accessible_output3.git",
    "anthropic>=0.72.0,<0.77",
    "babel (>=2.17,<2.18)",
    "fsspec>=2025.9.0,<2026.2",
    "google-genai>=1.47.0,<1.61",
    "httpx (>=0.28.1,<0.29.0)",
    "keyring (>=25.7.0,<25.8)",
    "markdown2 (>=2.5.4,<2.6)",
    "mistralai (>=1.10.1,<1.10.2)",
    "more-itertools (>=10.8.0,<10.8.1)",
    "numpy (>=2.4.0,<2.5)",
    "ollama (>=0.6.1,<0.7)",
    "openai>=2.6.1,<2.16",
    "ordered-set (>=4.1,<4.2)",
    "pillow>=12.0.0,<12.2",
    "platformdirs (>=4.5.1,<4.6)",
    "pydantic (>=2.12.5,<2.13)",
    "pydantic-settings>=2.11.0,<2.13",
    "pywin32 (>=311,<312) ; sys_platform == 'win32'",
    "pyyaml (>=6.0.3,<6.1)",
    "sounddevice (>=0.5.3,<0.6)",
    "truststore (>=0.10.4,<0.11)",
    "universal-pathlib (>=0.3.7,<0.4)",
    "wxpython (>=4.2.4,<4.3)",
]

[dependency-groups]
build = [
    "setuptools",
    "setuptools-scm (>=9.2.2)",
    "cx_freeze (>=8.5.3)",
]
test = [
    "pytest (>=9.0)",
    "pytest-cov (>=7.0.0)",
    "pytest-httpx (>=0.36)",
]

style = [
    "ruff (>=0.14.10,<0.15)",
    "commitizen (>=4.9.1,<4.13)",
    "prek (>=0.3.0)",
]

dev = [
  {include-group = "build"},
  {include-group = "test"},
  {include-group = "style"},
]

[project.urls]
homepage = "https://github.com/SigmaNight/basiliskLLM"
repository = "https://github.com/SigmaNight/basiliskLLM"
issues = "https://github.com/SigmaNight/basiliskLLM/issues"



[tool.setuptools]
packages = ["basilisk"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.uv]
package = false

[tool.coverage.run]
branch = true
source = ["basilisk"]
omit = ["basilisk/__main__.py", "*/tests/*", "*/res/*"]

[tool.coverage.report]
skip_empty = true
precision = 2

[tool.ruff]
src = ["src"]
respect-gitignore = true
line-length = 80
unsafe-fixes = false
target-version = "py314"
builtins = ["_", "gettext", "ngettext", "npgettext", "pgettext"]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["INT","I","C90","D","T201","T203","G001","G003","G004"]
extend-ignore = ["D206"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["basilisk"]
split-on-trailing-comma = false
[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "setuptools_scm"


[tool.cxfreeze]
executables = [
    {script="basilisk/__main__.py", base="gui", target_name="basilisk"},
]

[tool.cxfreeze.build_exe]
optimize = 1
build_exe = "dist"
excludes = [
    "babel.messages", "commitizen", "distutils", "email", "ftplib", "h11.tests", "jinja2",
    "numpy._core.tests", "numpy.f2py", "numpy.fft", "numpy.ma", "numpy.polynomial", "numpy.random", "numpy.testing",
    "packaging", "pip", "pydoc_data", "pygments", "pytest", "_pytest", "pluggy",
    "setuptools", "setuptools_scm", "sqlite3",
    "tomllib", "test", "tkinter", "unittest",
    "wint32gui", "win32ui", "win32uiold", "winreg",
]
include_files = ["basilisk/res"]
includes = ["numpy", "win32timezone", "multiprocessing", "multiprocessing.spawn", "multiprocessing.util"]
include_msvcr = true
packages = ["numpy", "basilisk.provider_engine", "basilisk.multiprocessing_worker", "keyring", "fsspec.implementations", "upath.implementations", "multiprocessing"]
zip_include_packages = [
    "_pyrepl", "anyio", "annotated_types", "anthropic", "asyncio",
    "backports", "cachetools", "certifi", "cffi", "charset_normalizer", "compression", "concurrent", "collections", "colorama", "ctypes", "curses",
    "distro", "docstring_parser", "dotenv", "email", "encodings", "eval_type_backport", "fsspec", "google", "googleapiclient", "grpc_status",
    "h11", "html", "httpcore", "http", "httplib2", "httpx",
    "idna", "importlib", "importlib_metadata", "importlib_resources",
    "jaraco", "jiter", "json", "keyring", "libloader", "logging",
    "mistralai", "more_itertools", "multiprocessing", "numpy", "ollama", "ordered_set", "openai", "opentelemetry",
    "pathlib", "pathlib_abc", "PIL", "platform_utils", "platformdirs", "proto", "pyasn1", "pyasn1_modules", "pycparser", "pyparsing", "pydantic", "pydantic_core", "pydantic_settings", "pywin", "pywin32_system32",
    "re", "rsa", "requests", "sniffio", "string", "sysconfig",
    "tarfile", "tenacity", "tokenizers", "tomli", "truststore", "tqdm", "typing_inspection",
    "uritemplate", "urllib", "urllib3", "upath",
    "websockets", "win32api", "win32com", "win32ctypes", "win32timezone",
    "xml", "xmlrpc", "yaml", "zipfile", "zipp", "zoneinfo",
    "basilisk"]
